JDK11 fails to build when C1 is disabled

XMLWordPrintable

      JDK11 fails to build with `--with-jvm-features=-compiler1`.

      ```
      === Output from failing command(s) repeated here ===
      * For target hotspot_variant-server_libjvm_objs_codeBlob.o:
      /root/df/jdk11u-dev/src/hotspot/share/code/codeBlob.cpp: In member function 'void CodeBlob::dump_for_addr(address, outputStream*, bool) const':
      /root/df/jdk11u-dev/src/hotspot/share/code/codeBlob.cpp:569:5: error: 'InterpreterCodelet' was not declared in this scope
           InterpreterCodelet* i = Interpreter::codelet_containing(addr);
           ^~~~~~~~~~~~~~~~~~
      /root/df/jdk11u-dev/src/hotspot/share/code/codeBlob.cpp:569:5: note: suggested alternative: 'InterpreterOopMap'
           InterpreterCodelet* i = Interpreter::codelet_containing(addr);
           ^~~~~~~~~~~~~~~~~~
           InterpreterOopMap
      /root/df/jdk11u-dev/src/hotspot/share/code/codeBlob.cpp:569:25: error: 'i' was not declared in this scope
           InterpreterCodelet* i = Interpreter::codelet_containing(addr);
                               ^
      /root/df/jdk11u-dev/src/hotspot/share/code/codeBlob.cpp:569:29: error: 'Interpreter' has not been declared
           InterpreterCodelet* i = Interpreter::codelet_containing(addr);
                                   ^~~~~~~~~~~
      /root/df/jdk11u-dev/src/hotspot/share/code/codeBlob.cpp:575:9: error: 'Interpreter' has not been declared
         ... (rest of output omitted)

      * All command lines available in /root/df/jdk11u-dev/build/linux-x86_64-normal-server-fastdebug/make-support/failure-logs.
      === End of repeated output ===
      ```

      ```
      * For target hotspot_variant-server_libjvm_objs_zBarrierSetAssembler_x86.o:
      /root/df/jdk11u-dev/src/hotspot/cpu/x86/gc/z/zBarrierSetAssembler_x86.cpp: In member function 'virtual void ZBarrierSetAssembler::barrier_stubs_init()':
      /root/df/jdk11u-dev/src/hotspot/cpu/x86/gc/z/zBarrierSetAssembler_x86.cpp:447:16: error: aggregate 'ResourceMark rm' has incomplete type and cannot be defined
         ResourceMark rm;
                      ^~
      /root/df/jdk11u-dev/src/hotspot/cpu/x86/gc/z/zBarrierSetAssembler_x86.cpp:448:32: error: incomplete type 'BufferBlob' used in nested name specifier
         BufferBlob* bb = BufferBlob::create("zgc_load_barrier_stubs", stub_code_size);
                                      ^~~~~~
      /root/df/jdk11u-dev/src/hotspot/cpu/x86/gc/z/zBarrierSetAssembler_x86.cpp:449:20: error: no matching function for call to 'CodeBuffer::CodeBuffer(BufferBlob*&)'
         CodeBuffer buf(bb);
                          ^
      In file included from /root/df/jdk11u-dev/src/hotspot/share/asm/assembler.hpp:28,
                       from /root/df/jdk11u-dev/src/hotspot/share/asm/macroAssembler.hpp:28,
                       from /root/df/jdk11u-dev/src/hotspot/share/asm/macroAssembler.inline.hpp:28,
                       from /root/df/jdk11u-dev/src/hotspot/cpu/x86/gc/z/zBarrierSetAssembler_x86.cpp:25:
      /root/df/jdk11u-dev/src/hotspot/share/asm/codeBuffer.hpp:473:3: note: candidate: 'CodeBuffer::CodeBuffer(const char*, CodeBuffer::csize_t, CodeBuffer::csize_t)'
         ... (rest of output omitted)

      * All command lines available in /root/df/jdk11u-dev/build/linux-x86_64-normal-server-fastdebug/make-support/failure-logs.
      ```

            Assignee:
            Jie Fu
            Reporter:
            Jie Fu
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: