8283409: JDK11 fails to build when C1 is disabled